Fix white space between boardDetails and sidebar

--- a/src/assets/styles/cmps/_GroupList.scss
+++ b/src/assets/styles/cmps/_GroupList.scss
@@ -39,6 +39,25 @@
 		}
 	}
 
+	.context-btn-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		height: 36px;
+		width: 40px;
+
+		background-color: $clr3;
+	}
+
+	.group-context-menu {
+		@include context-menu
+	}
+
+	.group-header:hover .group-context-menu {
+		opacity: 1;
+	}
+
 	.toggle-group-preview {
 		position: sticky;
 		left: 46px;
