--- a/src/assets/styles/cmps/_TaskPreview.scss
+++ b/src/assets/styles/cmps/_TaskPreview.scss
@@ -17,33 +17,7 @@
 	}
 
 	.task-context-menu {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		height: 24px;
-		width: 24px;
-
-		padding: 0;
-		border-radius: 4px;
-
-		margin: 0;
-		background-color: $clr3;
-		transition: scale 0.2s;
-
-		opacity: 0;
-
-		&:hover {
-			background-color: $hovered-btns;
-		}
-
-		&:active { 
-			scale: 0.9;
-		}
-
-		svg {
-			height: 16px;
-			width: 16px;
-		}
+		@include context-menu
 	}
 
 	&:hover .task-context-menu {
