--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -101,3 +101,37 @@
       background-color: $hovered-btns;
     }
   }
+
+  @mixin context-menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 24px;
+      width: 24px;
+  
+      padding: 0;
+      border-radius: 4px;
+  
+      margin: 0;
+      background-color: $clr3;
+      transition: scale 0.2s;
+  
+      opacity: 0;
+  
+      &:hover {
+        background-color: $hovered-btns;
+      }
+  
+      &:active { 
+        scale: 0.9;
+      }
+  
+      svg {
+        height: 16px;
+        width: 16px;
+      }
+  
+    * > &:hover {
+      opacity: 1;
+    }
+  }
